--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
     </nav>
     <header id="header">
         <div class="header__hero-text">
-            <h1 class="header__hero-main">This website is awesome</h1>
+            <h1 class="header__hero-main">This website is<br>awesome</h1>
             <p class="header__hero-secondary">
                 This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.
             </p>
             <button class="header__button button">Sign up</button>
         </div>
         <div class="header__image">
-            <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fdesignshack.net%2Fwp-content%2Fuploads%2Fplacehold.jpg&f=1&nofb=1" alt="Placeholder for an image" class="header__img">
+            <img src="./placeholder-image.png" alt="Placeholder for an image" class="header__img">
         </div>
     </header>
     <main id="main">
@@ -38,13 +38,43 @@
             </h2>
             <div class="main__first-container__boxes">
                 <div class="main__first-container__box">
-
+                    <span class="box"></span>
+                    <p class="main__text">This is some subtext under an illustration or image</p>
                 </div>
-                <div class="main__first-container__box"></div>
-                <div class="main__first-container__box"></div>
-                <div class="main__first-container__box"></div>
+                <div class="main__first-container__box">
+                    <span class="box"></span>
+                    <p class="main__text">This is some subtext under an illustration or image</p>
+                </div>
+                <div class="main__first-container__box">
+                    <span class="box"></span>
+                    <p class="main__text">This is some subtext under an illustration or image</p>
+                </div>
+                <div class="main__first-container__box">
+                    <span class="box"></span>
+                    <p class="main__text">This is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
+        <div class="main__second-container">
+            <p class="main__quote">
+                This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+            </p>
+            <p class="main__name">-Thor, God of Thunder</p>
+        </div>
+        <div class="main__CTA">
+            <div class="main__CTA-container">
+                <p class="CTA__text">
+                    <span class="strong">Call to action! It's time!</span><br>
+                    Sign up for our product by clicking that button right over there!
+                </p>
+                <button class="button CTA__button">
+                    Sign up
+                </button>
             </div>
         </div>
     </main>
+    <footer id="footer">
+        <p class="footer__text">Copyright &#169; The Odin Project 2021</p>
+    </footer>
 </body>
 </html>
